# folio_3.1

./: .gitignore  CI_CD_FIX_SUMMARY.md  SONARQUBE_SETUP_GUIDE.md  TEST_SONARQUBE.md  TODO.md  start-dev.bat  start-dev.sh
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  playwright.yml  sonarqube.yml
dev/: CDC.md  FRONTEND.md  PROJET.md  TODO.md
dev/maquette/: about.html  contact.html  index.html  rss.html
dev/maquette/css/: style.css
dev/maquette/js/: rss.js  script.js
portfolio/api/: .env.example  .gitignore  Cargo.toml  Makefile  deny.toml  docker-compose.yml  sonar-project.properties
portfolio/api/docker/: mongo-init.js
portfolio/api/src/: config.rs  lib.rs  main.rs
portfolio/api/src/middleware/: mod.rs  mongo_sanitizer.rs  rate_limit.rs
portfolio/api/src/models/: contact.rs  mod.rs  rss.rs
portfolio/api/src/routes/: contact.rs  health.rs  mod.rs  rss.rs
portfolio/api/src/services/: contact.rs  db.rs  email_queue.rs  email_templates.rs  mod.rs  rss.rs
portfolio/api/src/utils/: mod.rs
portfolio/api/tests/: README.md  contact_service_integration_test.rs  dependencies_validation.rs  fixtures_usage.rs  integration_tests.rs  middleware_integration_test.rs  rss_service_integration_test.rs
portfolio/api/tests/common/: fixtures.rs  lib.rs  mod.rs
portfolio/api/tests/integration/: contact_service_test.rs  middleware_test.rs  mod.rs
portfolio/web/: .env.example  .gitignore  .prettierrc.json  Cargo.toml  Dioxus.toml  astro.config.mjs  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  sonar-project.properties  tailwind.config.mjs  vitest.config.ts
portfolio/web/e2e/: about.spec.ts  components.spec.ts  contact-form.spec.ts  contact.spec.ts  rss.spec.ts  test-types.d.ts
portfolio/web/public/: _headers  style.css
portfolio/web/scripts/: generate-pwa-assets.js  run-tests.ps1
portfolio/web/src/: env.d.ts  main.rs  pwa.ts
portfolio/web/src/components/common/: Button.astro  Card.astro  Input.astro  Loader.astro  Modal.astro  PWAManager.astro  Pagination.astro  RssCard.astro  Toast.astro  ToastManager.ts
portfolio/web/src/components/layout/: Footer.astro  Header.astro
portfolio/web/src/components/sections/: ContactForm.astro  Hero.astro  RssFeeds.astro  RssIntro.astro
portfolio/web/src/layouts/: Layout.astro
portfolio/web/src/pages/: 404.astro  about.astro  components.astro  contact.astro  index.astro  mentions-legales.astro  rss.astro
portfolio/web/src/scripts/: ToastManager.test.ts  ToastManager.ts  fireflies.ts
portfolio/web/src/styles/: global.css
portfolio/web/src/tests/: example.test.ts  setup.ts
portfolio/web/src/tests/fixtures/: api-responses.ts  contact-form.ts  index.ts  utils.ts
portfolio/web/src/tests/mocks/: handlers.ts
portfolio/web/src/types/: global.d.ts
portfolio/web/src/utils/: seo.test.ts  seo.ts
portfolio/web/tests/: rss.spec.ts
portfolio/web/tests/e2e/: contact-form.spec.ts
src/: config.rs
src/services/: db.rs  rss.rs
