[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Piton"]
description = "Backend API for Mathieu Piton's portfolio"

[dependencies]

# Database
mongodb = "3.1"
futures = "0.3"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and configuration
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.4"
rss = "2.0.11"
regex = "1.11.1"
lazy_static = "1.5.0"
handlebars = "4.3"
async-channel = "1.8"
axum = { version = "0.8.1", features = ["tower-log"] }
tower-http = { version = "0.6.2", features = ["cors"] }
validator = "0.19.0"
validator_derive = "0.19.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
mockito = "1.6.1"
# Testing
tokio-test = "0.4"
wiremock = "0.5"
