[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Piton"]
description = "Backend API for Mathieu Piton's portfolio"

[dependencies]

# Database
mongodb = "3.1"
futures = "0.3"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and configuration
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.4"
rss = "2.0.11"
regex = "1.11.1"
lazy_static = "1.5.0"
handlebars = "4.3"
async-channel = "1.8"
axum = { version = "0.8.1", features = ["macros", "tower-log"] }
tower-http = { version = "0.6.2", features = ["cors", "limit", "trace"] }
validator = { version = "0.19.0", features = ["derive"] }
validator_derive = "0.19.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["util", "limit"] }
futures-util = "0.3.31"
sys-info = "0.9.1"
once_cell = "1.20.2"
urlencoding = "2.1.3"
scraper = "0.18.1"

[dev-dependencies]
filetime = "0.2.25"
mockito = "1.6.1"
tempfile = "3.15.0"
# Testing
tokio-test = "0.4"
wiremock = "0.6"
