[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Piton"]
description = "Backend API for Mathieu Piton's portfolio"
license = "MIT"

[dependencies]

# Database
mongodb = "3.3.0"
futures = "0.3"

# Async runtime
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync"] }

# Serialization
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"

# Logging and configuration
log = "0.4.28"
dotenvy = "0.15"

# Error handling
anyhow = "1.0.99"

# Time handling
chrono = { version = "0.4.42", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5.7"
rss = "2.0.11"
regex = "1.11.2"
handlebars = "6.3.2"
axum = { version = "0.8.1", features = ["macros", "tower-log"] }
tower-http = { version = "0.6.2", features = ["cors", "limit", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["util", "limit"] }
futures-util = "0.3.31"
sys-info = "0.9.1"
once_cell = "1.20.2"
urlencoding = "2.1.3"

[dev-dependencies]
filetime = "0.2.26"
mockito = "1.6.1"
tempfile = "3.22.0"
# Testing
tokio-test = "0.4"
wiremock = "0.6.5"
