[package]
name = "portfolio-web"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Piton"]
description = "Frontend for Mathieu Piton's portfolio"

[dependencies]
dioxus = { version = "0.6.1", features = ["web"] }
dioxus-web = "0.6.1"
dioxus-router = "0.6.1"
dioxus-hooks = "0.6.1"
gloo = "0.11.0"
i18n-embed = { version = "0.15.3", features = ["fluent-system", "web-sys"] }
reqwest = { version = "0.12.12", features = ["json"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "HtmlElement",
    "Window",
    "Document",
    "Element",
] }

[features]
default = ["web"]
web = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
